# starkex-resources

./: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  build.sh  presubmit.sh  tox.ini
aerospike/: CMakeLists.txt  aerospike.conf
committee/: CMakeLists.txt  Dockerfile  HOWTO.md  README.md  build_committee_docker.sh  config.yml  docker-compose.yml  integration_test.py  private_key.txt  setup.py
committee/committee/: availability_gateway_client.py  batch_info.json  committee.py  committee_test.py  custom_validation.py  dump_vaults_tree.py
committee/mock_availability_gateway/: CMakeLists.txt  Dockerfile  README.md  config.yml  setup.py
committee/mock_availability_gateway/mock_availability_gateway/: data.json  fetch_state_updates.py  mock_availability_gateway.py
crypto/: CMakeLists.txt  README.md  setup.py
crypto/starkware/crypto/signature/: __init__.py  asset.js  assets_precomputed.json  balances_to_merkle_root.py  balances_to_merkle_root_test.py  fast_pedersen_hash.py  fast_pedersen_hash_test.py  key_derivation.js  keys_precomputed.json  math_utils.py  nothing_up_my_sleeve_gen.py  package.json  rfc6979_signature_test_vector.json  settlement_example.json  signature.js  signature.py  signature_example.js  signature_test.js  signature_test.py  signature_test_data.json
crypto/starkware/crypto/signature/test/: .eslintrc.json  asset_test.js  key_derivation_test.js  signature_test.js
stark_ex_objects/: CMakeLists.txt  README.md  setup.py
stark_ex_objects/starkware/: availability_claim.py  error_handling.py
stark_ex_objects/starkware/objects/: availability.py  fields.py  state.py
storage/: CMakeLists.txt  README.md  setup.py
storage/starkware/: __init__.py
storage/starkware/storage/: aerospike_lock.py  aerospike_storage_threadpool.py  batch_store.py  batch_store_test.py  dict_storage.py  imm_storage.py  redis_lock.py  redis_storage.py  s3_storage.py  storage.py  storage_test.py  test_utils.py
storage/starkware/storage/merkle_tree/: __init__.py  merkle_tree.py  merkle_tree_test.py
